{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 17,
  "lineage": "1d33fa94-ed8d-fdc0-9437-aae0877898ab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:511874874257:internet-gateway/igw-04b7417fb433f7f60",
            "id": "igw-04b7417fb433f7f60",
            "owner_id": "511874874257",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "tokyo-igw-main"
            },
            "tags_all": {
              "Name": "tokyo-igw-main"
            },
            "vpc_id": "vpc-0454b756d25754f28"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "igw-04b7417fb433f7f60",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privates_without_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:511874874257:route-table/rtb-0a63bb93bd61c2998",
            "id": "rtb-0a63bb93bd61c2998",
            "owner_id": "511874874257",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [],
            "tags": {
              "Name": "tokyo-route-private-1"
            },
            "tags_all": {
              "Name": "tokyo-route-private-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0454b756d25754f28"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtb-0a63bb93bd61c2998",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:511874874257:route-table/rtb-08b3ebdf7c59f75f9",
            "id": "rtb-08b3ebdf7c59f75f9",
            "owner_id": "511874874257",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [],
            "tags": {
              "Name": "tokyo-route-private-2"
            },
            "tags_all": {
              "Name": "tokyo-route-private-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0454b756d25754f28"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtb-08b3ebdf7c59f75f9",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:511874874257:route-table/rtb-0223bba03d193762e",
            "id": "rtb-0223bba03d193762e",
            "owner_id": "511874874257",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04b7417fb433f7f60",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tokyo-route-public"
            },
            "tags_all": {
              "Name": "tokyo-route-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0454b756d25754f28"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtb-0223bba03d193762e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privates",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a85521608d6029e",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0a63bb93bd61c2998",
            "subnet_id": "subnet-018851271fb2f7fd1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtbassoc-06a85521608d6029e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_eip.nat_ips",
            "aws_nat_gateway.private_nat_gws",
            "aws_route_table.privates_with_nat",
            "aws_route_table.privates_without_nat",
            "aws_subnet.privates",
            "aws_subnet.publics",
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d47ecbd1ecaf2cd2",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-08b3ebdf7c59f75f9",
            "subnet_id": "subnet-0951c95ca1f26024f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtbassoc-0d47ecbd1ecaf2cd2",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_eip.nat_ips",
            "aws_nat_gateway.private_nat_gws",
            "aws_route_table.privates_with_nat",
            "aws_route_table.privates_without_nat",
            "aws_subnet.privates",
            "aws_subnet.publics",
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06596365eced74268",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0223bba03d193762e",
            "subnet_id": "subnet-03fb40efa230d06cc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtbassoc-06596365eced74268",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.publics",
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018e582a0661d9414",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0223bba03d193762e",
            "subnet_id": "subnet-034fad3c7125ff785"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtbassoc-018e582a0661d9414",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.publics",
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "db",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:511874874257:security-group/sg-0eb2055799496b27a",
            "description": "allow ssh, mysql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb2055799496b27a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "fw-db",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-db"
            },
            "tags_all": {
              "Name": "fw-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0454b756d25754f28"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-0eb2055799496b27a",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "redis",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:511874874257:security-group/sg-050bedd91cc62e7c2",
            "description": "allow ssh, redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050bedd91cc62e7c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "fw-redis",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-redis"
            },
            "tags_all": {
              "Name": "fw-redis"
            },
            "timeouts": null,
            "vpc_id": "vpc-0454b756d25754f28"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-050bedd91cc62e7c2",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "web",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:511874874257:security-group/sg-014b2930105186eec",
            "description": "allow http, https, ssh, icmp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-014b2930105186eec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "fw-web",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-web"
            },
            "tags_all": {
              "Name": "fw-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0454b756d25754f28"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-014b2930105186eec",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privates",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:511874874257:subnet/subnet-018851271fb2f7fd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018851271fb2f7fd1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511874874257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "tokyo-subnet-private-1"
            },
            "tags_all": {
              "Name": "tokyo-subnet-private-1"
            },
            "vpc_id": "vpc-0454b756d25754f28"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "subnet-018851271fb2f7fd1",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:511874874257:subnet/subnet-0951c95ca1f26024f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0951c95ca1f26024f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511874874257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "tokyo-subnet-private-2"
            },
            "tags_all": {
              "Name": "tokyo-subnet-private-2"
            },
            "vpc_id": "vpc-0454b756d25754f28"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "subnet-0951c95ca1f26024f",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:511874874257:subnet/subnet-03fb40efa230d06cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fb40efa230d06cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511874874257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "tokyo-subnet-public-1"
            },
            "tags_all": {
              "Name": "tokyo-subnet-public-1"
            },
            "vpc_id": "vpc-0454b756d25754f28"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "subnet-03fb40efa230d06cc",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:511874874257:subnet/subnet-034fad3c7125ff785",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034fad3c7125ff785",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511874874257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "tokyo-subnet-public-2"
            },
            "tags_all": {
              "Name": "tokyo-subnet-public-2"
            },
            "vpc_id": "vpc-0454b756d25754f28"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "subnet-034fad3c7125ff785",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:511874874257:vpc/vpc-0454b756d25754f28",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-08ee1476662553d10",
            "default_route_table_id": "rtb-0335b686adaeda302",
            "default_security_group_id": "sg-0c81ce8bdde5718dc",
            "dhcp_options_id": "dopt-0cbff40b79e013904",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0454b756d25754f28",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0335b686adaeda302",
            "owner_id": "511874874257",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "tokyo-vpc-main"
            },
            "tags_all": {
              "Name": "tokyo-vpc-main"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "vpc-0454b756d25754f28",
            "region": "ap-northeast-1"
          }
        }
      ]
    }
  ]
}